<resources>
    <string name="app_name">Whats Happening</string>
    <string name="action_settings">Settings</string>

    <string name="title_text">Whats Happening</string>
    <string name="welcome">Login to begin sharing in \nthe moment!</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_welcome">Events in progress</string>
    <string name="dashboard_welcome1">Test1</string>
    <string name="dashboard_welcome2">Test2</string>
    <string name="dashboard_welcome3">Test3</string>

    <string name="splash">splash</string>
    <string name="gamecast_button">Gamecast</string>
    <string name="listen_button">Listen</string>
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signing_in">Signing inâ€¦</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="title_activity_wts_mode">wts_mode</string>
    <string name="parse_app_id">kU2ULP6h2F7ySVsXFsGDKvtH2omwixVtMNqaCRJl</string>
    <string name="parse_client_key">PcAg3kVcAcZlZFbCztgPa9qjU9pbZRbMnnMzUxyb</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_up_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="reset_password">Reset Password</string>
    <string name="title_activity_gamecast">Gamecast</string>
    <string name="title_activity_follow">Follow</string>

    <!-- Strings Gamecast/listen -->
    <string name="action_gamecast">Gamecast</string>
    <string name="action_follow">Listen</string>
    <string name="action_signout">Sign Out</string>
    <string name="action_about">About</string>

    <string name="about_title">Whats Happening App</string>
    <string name="about_message">Whats Happening lets you stream a game,your conscious and any other event to your freinds and family.</string>
    <string name="about_ok">Lets make it happen!!</string>
</resources>
