<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_gamecast"
        android:icon="@drawable/ic_action_gamecast"
        android:title="@string/action_gamecast"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_follow"
        android:icon="@drawable/ic_action_follow"
        android:title="@string/action_follow"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:title="@string/action_about"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_signout"
        android:icon="@drawable/ic_action_signout"
        android:title="@string/action_signout"
        app:showAsAction="ifRoom"
        />
</menu>
